Change template document class to exam
Exam class offers a better exercise numbering by default

--- a/Laskaripohja (eng).tex
+++ b/Laskaripohja (eng).tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper, twoside, 12pt]{artikel3} %jos artikel3 ei toimi, käytä article
+\documentclass[a4paper, twoside, addpoints, 12pt]{exam} %jos artikel3 ei toimi, käytä article
 
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -34,24 +34,50 @@
 \newcommand{\aalto}[1]{\left{ #1  \right}}
 \newcommand{\haka}[1]{\left[ #1 \right]}
 
+\pagestyle{head}	%HUOM! jos käyttää ilma pagenumberingia (none), niin exam documentclass menee rikki (haluaa käyttää numerointia monessa komennossa...), empty toimii
+\firstpageheader{[NAME OF THE COURSE]\\	%headerin vasen laita
+					Spring/Fall 20XX\\
+					Exercise X} %HARJOITUKSEN NUMERO!
+					{}								%headerin keskiosa
+					{Name: Olli Väisänen\\			%headerin oikea laita
+					e-mail: \email \\
+					Student id: XXXXXX}
+\firstpageheadrule
 
 \begin{document}
 %\ddmmyyyydate %muuttaa (yhdessä dateseparatorin vaihtamisen kanssa) today-komennon muotoilun suomalaiseksi: DD.MM.YYYY
-\pagestyle{empty} 
-\pagenumbering{none}
-[NAME OF THE COURSE] \hfill Name: Olli Väisänen\\%Kurssin nimi
-Spring/Fall 20XX \hfill e-mail: \href{mailto:olli.vaisanen@helsinki.fi}{olli.vaisanen@helsinki.fi} \\
-Exercise X \hfill  Student id: XXXXXXXX \\%HARJOITUKSEN NUMERO!
 
-\begin{enumerate}[Prob. 1.] \itemsep12pt
-	\item %Tehtävä 1, seuraavat tehtävät jälleen itemeinä.
-%		\begin{enumerate} \itemsep8pt
-%			\item %Tähän tehtävän osat a), b), c), etc. itemeinä.
-%				\begin{enumerate} \itemsep6pt
-%					\item %Jos tehtävällä vielä aliosia, niin jatketaan enumerateja...
-%				\end{enumerate}
-%		\end{enumerate}
-\end{enumerate}
+%%%%%%Header jos laskaripohja on documentclass article tai artikel3
+%\pagestyle{empty} 
+%\pagenumbering{empty}
+%[NAME OF THE COURSE] \hfill Name: Olli Väisänen\\%Kurssin nimi
+%Spring/Fall 20XX \hfill e-mail: \href{mailto:olli.vaisanen@helsinki.fi}{olli.vaisanen@helsinki.fi} \\
+%Exercise X \hfill  Student id: XXXXXXXX \\%HARJOITUKSEN NUMERO!
+
+\begin{questions}	%exam dokumenttiluokan ympäristö, numeroi tehtävät järkevämmin (tosin enumitems ois tehny tän kyl kans..)
+
+	\question 
+	
+%	\question
+%	\begin{parts}
+%		\part
+%		\begin{subparts}
+%			\subpart
+%		\end{subparts}
+%	\end{parts}
+
+\end{questions}
+
+%%%%%%Tehtävien numerointi jos documenttiluokka on article tai artikel3
+%\begin{enumerate}[Prob. 1.] \itemsep12pt
+%	\item %Tehtävä 1, seuraavat tehtävät jälleen itemeinä.
+%%		\begin{enumerate} \itemsep8pt
+%%			\item %Tähän tehtävän osat a), b), c), etc. itemeinä.
+%%				\begin{enumerate} \itemsep6pt
+%%					\item %Jos tehtävällä vielä aliosia, niin jatketaan enumerateja...
+%%				\end{enumerate}
+%%		\end{enumerate}
+%\end{enumerate}
 
 \begin{comment}
 Kappaleen vaihto tyhjällä rivillä!:
