--- a/selkkaripohja.tex
+++ b/selkkaripohja.tex
@@ -53,7 +53,7 @@
 
 \thispagestyle{empty} 
 Olli Väisänen\hfill Mittaus suoritettu:  \\%päiväys!
-op.nro 013326836 \hfill Assistentti:  \\%assistentti
+op.nro XXXXXXXXXX \hfill Assistentti:  \\%assistentti
 \email \hfill Palautettu: \today \\%palautuspäivä!
 \vfill
 \begin{center}
