--- a/Laskaripohja.tex
+++ b/Laskaripohja.tex
@@ -25,6 +25,7 @@
 	list-pair-separator = { ja },
 	range-phrase = {--},	%defaultina lukuvälit ilmoitetaan "2 to 10"
 	separate-uncertainty = true}	%tuloksen epävarmuus erillisenä, esim. (12.3 ± 0.4) kg
+\DeclareSIUnit\Aa{\text{Å}}	%Å ei ole enää SI-yksikkö, joten siunitx-paketti kikkaa komennon \angstrom käytöstä. Määritellään oma
 
 \newcommand{\degree}{^{\circ}} %Astemerkki matematiikkatilassa
 \renewcommand{\vec}{\mathbf} %Vektorin ylänuolen sijasta vektorit lihavoituna
@@ -36,6 +37,8 @@
 \newcommand{\kaari}[1]{\left( #1 \right)}
 \newcommand{\aalto}[1]{\left{ #1  \right}}
 \newcommand{\haka}[1]{\left[ #1 \right]}
+
+\newcommand{\LAMMPS}{\textsf{LAMMPS} }
 
 \pagestyle{head}	%HUOM! jos käyttää ilma pagenumberingia (none), niin exam documentclass menee rikki (haluaa käyttää numerointia monessa komennossa...), empty toimii
 \firstpageheader{[KURSSIN NIMI]\\	%headerin vasen laita
