Added subcaption package for subfigures

--- a/Laskaripohja (eng).tex
+++ b/Laskaripohja (eng).tex
@@ -16,6 +16,7 @@
 \usepackage[pdftex]{hyperref} %pdf-tiedostoon viittaukset hyperlinkkeinä, linkkien ympärille tulevat jutut eivät tule tulosteeseen. Lisää myös kätevät linkkipaketit (ks. käyttö lopusta)
 \usepackage{verbatim} %korjaa verbatim-ympäristön bugeja ja lisää comment-ympäristön pitkille kommenteille
 \usepackage[footnotesize, bf]{caption} %kuvien ja taulukoiden kuvatekstin muokkaus (esim. pienempi fontti, lihavointi)
+\usepackage{subcaption} %kuvien sub-kuville
 \usepackage{datetime} %muuttaa today-komennon muotoilua
 \usepackage{siunitx} %numeroiden ja erityisesti yksiköiden muotoilu konsistentiksi, katso ohjeita lopusta, toimii sekä matematiikkatilassa että tekstissä
 \sisetup{	%siunitx-paketin asetukset vaativat suomenkielessä vähän säätöä
